🐧modificaciones en la imagenes de la vista de inicio y en los filtro de productoshop

--- a/public/css/estilo/styles.css
+++ b/public/css/estilo/styles.css
@@ -3705,6 +3705,73 @@ video {
 
 /*FIN ESTILOS CATEGORIAS Y MARCAS*/
 
+mg {
+  max-width: 100%;
+}
+.carousel-container {
+  width: 1100px;
+  margin: 50px auto;
+  position: relative;
+  border-left-width: 4px;
+  border-left-style: solid;
+  border-left-color: #aaa;
+}
+@media (max-width: 768px) {
+  .carousel-container {
+    width: 95%;
+  }
+}
+.inner-carousel {
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+}
+.track {
+  display: inline-flex;
+  height: 100%;
+  transition: transform 0.2s ease-in-out;
+}
+.card-container {
+  width: 275px;
+  height: 400px;
+  flex-shrink: 0;
+  padding-right: 10px;
+}
+@media (max-width: 768px) {
+  .card-container {
+    width: 184px;
+  }
+}
+.card {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+.nav button {
+  position: absolute;
+  top: 50%;
+  transform: translatey(-50%);
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  outline: none;
+  border: 1px solid #000;
+  cursor: pointer;
+}
+.nav .prev {
+  left: -30px;
+  display: none;
+}
+.nav .prev.show {
+  display: block;
+}
+.nav .next {
+  right: -30px;
+}
+.nav .next.hide {
+  display: none;
+}
+
 
 
 
@@ -3785,8 +3852,14 @@ video {
 
 .tamanoCard{
   object-fit: cover;
-  width: 12rem;
-  height: 12rem;
+  width: 10em;
+  height: 10em;
+}
+
+.tamanoCard2{
+  object-fit: cover;
+  width: 10rem;
+  height: 19rem;
 }
 
 
